# chimera-robo43-dome

./: .gitignore  README.md  pyproject.toml
chimera_robo43_dome/instruments/: controller.py  domedriver.py  domerobo43.py
chimera_robo43_dome/util/: domecoords.py
tests/: fake_controller.py  test_domedriver.py
